<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_pay">付款按钮</string>
    <string name="button_switch">点我切换到第二个Activity</string>
    <string name="button_switch_activity_rating_seek">切换到Activity_rating_seek</string>
    <string name="image_view_pay">包子</string>
    <string name="tv_sex">性别</string>
    <string name="tv_grade">给自己打个分</string>
    <string name="tv_process">工作进度</string>
    <string name="tv_timeout">时间都去哪了</string>
    <string name="rb_man">男</string>
    <string name="rb_woman">女</string>
    <string name="tv_hobby">兴趣</string>
    <string name="cb_basketball">篮球</string>
    <string name="cb_football">足球</string>
    <string name="cb_swim">游泳</string>
    <string name="button_mainActivity">切换至mainActivity</string>
    <string name="button_radioCheckBoxActivity">切换至RadioCheckBoxActivity</string>
    <string name="button_ratingSeekActivity">切换至RatingSeekActivity</string>
    <string name="button_index_save_and_recover">切换至saveAndRecover</string>
    <string name="button_index_camera">切换至camera</string>
    <string name="button_index_send_broadcast">切换至发送广播</string>
    <string name="button_dynamic_register_broadcast_receiver">切换至动态注册广播接收器</string>
    <string name="button_barcode_scaner">切换barcodeScaner</string>
    <string name="button_thread">切换Thead</string>
    <string name="button_switch_start_service">切换startService</string>
    <string name="button_switch_bind_service">切换bindService</string>
    <string name="button_switch_start_and_bind_service">切换start_and_bind_Service</string>
    <string name="switch_remote_service">切换remote_Service</string>
    <string name="switch_menu">切换menu</string>
    <string name="switch_fragment">切换fragment</string>
    
    <string name="button_save_and_revocer_sendBtn">发送</string>
    <string name="button_save_and_revocer_returnBtn">返回</string>
    <string name="button_start_activity_for_request">点击返回</string>
    <string name="imageview_show_photo">展示照片</string>
    <string name="button_camera_take_photo">调用内置相机拍照</string>
    <string name="button_send_broadcast_send">发送</string>
    <string name="button_barcode_scaners">启动barcodeScaner扫描条形码</string>
    <string name="text_view_barcode_scaner">条码扫描结果：</string>
    
    <string name="button_thread_main">主线程</string>
    <string name="button_thread1">子线程1</string>
    <string name="button_thread2">子线程2</string>
    <string name="button_thread3">子线程3</string>
    
    <string name="button_start_service">启动Service</string>
    <string name="button_end_service">结束Service</string>
    <string name="text_view_title">绑定型服务</string>
    <string name="button_bind_start_service">启动Service</string>
    <string name="button_bind_end_service">结束Service</string>
    <string name="start_and_bind_text_view_title">启动和绑定型服务</string>
    <string name="button_start_and_bind_start_service">start</string>
    <string name="button_start_and_bind_stop_service">stop</string>
    <string name="button_start_and_bind_bind_service">bind</string>
    <string name="button_start_and_bind_unBind_service">unBind</string>
    
    <string name="text_view_remote_service">跨进程通信实例：</string>
    <string name="text_view_reception_service">前台服务实例：</string>
    <string name="button_bind_aidl_service">绑定AIDL服务</string>
    <string name="button_call_aidl_service">调用AIDL服务</string>
    <string name="button_cancel_bind_aidl_serivce">取消绑定AIDL服务</string>
    <string name="button_start_reception_serivce">启动前台服务</string>
    <string name="button_stop_reception_serivce">停止前台服务</string>
    
    <string name="subMenu">子菜单</string>
    <string name="menuItem1">菜单一</string>
    <string name="menuItem2">菜单二</string>
    <string name="OpenContextMenu">OpenContextMenu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="text_change_rightfragment">动态改变rightFragment</string>

</resources>