<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstandroid.IndexActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00bbcc"
            android:orientation="vertical" >

            <Button
                android:id="@+id/mainActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_mainActivity"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/radioCheckBoxActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_radioCheckBoxActivity"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/ratingSeekActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_ratingSeekActivity"
                android:textColor="#FFFFFF" />
            
            <Button
                android:id="@+id/saveAndRecover"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_index_save_and_recover"
                android:textColor="#FFFFFF" />
            
            <Button
                android:id="@+id/camera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_index_camera"
                android:textColor="#FFFFFF" />
            
             <Button
                android:id="@+id/sendBroadcast"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_index_send_broadcast"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/dynamicRegisterBroadcastReceiver"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_dynamic_register_broadcast_receiver"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/barcodeScaner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_barcode_scaner"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/thread"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_thread"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/switch_start_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_switch_start_service"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/switch_bind_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_switch_bind_service"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/switch_start_and_bind_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_switch_start_and_bind_service"
                android:textColor="#FFFFFF" />
             
             <Button
                android:id="@+id/switch_remote_service"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_remote_service"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>