<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstandroid.IndexActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/text_view_remote_service"
        android:textColor="#ff0047"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00bbcc"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bing_aidl_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_bind_aidl_service"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/call_aidl_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call_aidl_service"
            android:textColor="#FFFFFF"
            android:enabled="false" />

        <Button
            android:id="@+id/cancel_bind_aidl_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_bind_aidl_serivce"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/text_view_reception_service"
        android:textColor="#ff0047"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00bbcc"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start_reception_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start_reception_serivce"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/stop_reception_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stop_reception_serivce"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>