<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BBFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstandroid.RadioCheckBoxActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/tv_sex"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgsex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <RadioButton
                android:id="@+id/rbman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_man" />

            <RadioButton
                android:id="@+id/rbwoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_woman" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_hobby"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/tv_hobby"
            android:textColor="#000000"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_baseketball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_basketball" />

        <CheckBox
            android:id="@+id/cb_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_football" />

        <CheckBox
            android:id="@+id/cb_swim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_swim" />
    </LinearLayout>

</LinearLayout>