<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BBFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstandroid.MainActivity" >

    <Button
        android:id="@+id/btnSwitch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_switch"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/btnSwitchActivity_rating_seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_switch_activity_rating_seek"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pay"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/ivPay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/image_view_pay"
        android:src="@drawable/baozi" />

</LinearLayout>