<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_title"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    
    <Button
        android:id="@+id/bind_start_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bind_start_service"
        android:textColor="#FF00FF"/>
    
    <Button
        android:id="@+id/bind_end_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bind_end_service"
        android:textColor="#FFFF00" />

</LinearLayout>