<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firstandroid.RatingSeekActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00bbcc"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00ffbb"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:text="@string/tv_grade"
                    android:textColor="#FF0000"
                    android:textSize="25sp" />

                <RatingBar
                    android:id="@+id/rb_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="3"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tv_process"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:text="@string/tv_process"
                    android:textColor="#FF0000"
                    android:textSize="25sp" />

                <SeekBar
                    android:id="@+id/sb_process"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="60" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10sp"
                    android:text="@string/tv_timeout"
                    android:textColor="#FF0000"
                    android:textSize="25sp" />

                <ImageButton
                    android:id="@+id/ib_timeout"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/tv_timeout"
                    android:src="@drawable/baozi" />

                <ProgressBar
                    android:id="@+id/pb_timeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#bb00ff"
                android:orientation="vertical" >

                <DatePicker
                    android:id="@+id/dp_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TimePicker
                    android:id="@+id/tp_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>